// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List component should match snapshot 1`] = `
<div>
  <div
    class="css-zkr0k6-List"
  >
    <ul
      class="css-1roqklx-List"
    >
      <li
        class="css-50zunu"
      >
        <div
          class="css-eydsp4-Text"
        >
          one
        </div>
      </li>
      <li
        class="css-50zunu"
      >
        <div
          class="css-eydsp4-Text"
        >
          two
        </div>
      </li>
      <li
        class="css-50zunu"
      >
        <div
          class="css-eydsp4-Text"
        >
          three
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`List component should match snapshot with custom props 1`] = `
<div>
  <div
    class="css-zkr0k6-List"
  >
    <div
      class="css-3vy6se-Text"
    >
      test
    </div>
    <ol
      class="css-1roqklx-List"
    >
      <li
        class="css-1ub0xpm"
      >
        <button
          class="css-c3dhtb-Button"
          type="button"
        >
          <span>
            one
          </span>
        </button>
      </li>
      <li
        class="css-50zunu"
      >
        <button
          class="css-c3dhtb-Button"
          type="button"
        >
          <span>
            two
          </span>
        </button>
      </li>
      <li
        class="css-50zunu"
      >
        <button
          class="css-c3dhtb-Button"
          type="button"
        >
          <span>
            three
          </span>
        </button>
      </li>
    </ol>
  </div>
</div>
`;
